# scan-linkedin-candidates

./: README.md  debug_login.py  debug_selenium.py  env.example  pyproject.toml  requirements.txt  start_simple.py
requirements/: base.txt  dev.txt  prod.txt
scripts/: activate_env.bat  activate_env.sh  setup.bat  setup.sh  start.bat  start.py  test_platform.py
src/: main.py
src/linkedin_scraper/api/v1/endpoints/: health.py  search.py
src/linkedin_scraper/api/v1/models/: requests.py  responses.py
src/linkedin_scraper/config/: constants.py  settings.py
src/linkedin_scraper/core/scrapers/: base.py  selenium_scraper.py
src/linkedin_scraper/core/services/: search_service.py
src/linkedin_scraper/core/utils/: helpers.py
